Descomposicion del componente padre en componentes hijos

--- a/src/app/components/company-view/company-view.component.html
+++ b/src/app/components/company-view/company-view.component.html
@@ -1,1 +1,5 @@
-<p>company-view works!</p>
+<h3>Datos de la empresa</h3>
+<ul class="list-group">
+  <li class="list-group-item active">{{ company.name }}</li>
+  <li class="list-group-item">{{ company.fiscalNumber }}</li>
+</ul>
