--- a/src/app/components/list-items/list-items.component.html
+++ b/src/app/components/list-items/list-items.component.html
@@ -1,1 +1,20 @@
-<p>list-items works!</p>
+<h4>Detalle de la factura</h4>
+@if(items.length > 0){
+<table class="table table-striped table-hover">
+  <thead>
+    <tr>
+      <th>id</th>
+      <th>product</th>
+      <th>price</th>
+      <th>quantity</th>
+    </tr>
+  </thead>
+  <tbody>
+    @for(item of items; track $index){
+      <tr row-items [item]="item"></tr>
+    }
+  </tbody>
+</table>
+}@else{
+    <div class="alert alert-warning">La factura no tiene items</div>
+}
