Correcciones realizadas, terminaciones s en carpetas y configurando en el servicio invoice el Total

--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -16,7 +16,7 @@
         </div>
       </div>
       <div>
-        <list-items [items]="invoice.items"></list-items>
+        <list-item [items]="invoice.items"></list-item>
       </div>
     </div>
   </div>
