--- a/src/app/components/list-item/list-item.component.html
+++ b/src/app/components/list-item/list-item.component.html
@@ -11,7 +11,7 @@
   </thead>
   <tbody>
     @for(item of items; track $index){
-      <tr row-items [item]="item"></tr>
+      <tr row-item [item]="item"></tr>
     }
   </tbody>
 </table>
