--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -4,19 +4,20 @@
       <h2>Ejemplo Factura</h2>
     </div>
     <div class="card-body">
-      <invoice-view [id]="invoice.id" [name]="invoice.name"></invoice-view>
+      <invoice-view [id]="invoice.id" [name]="invoice.name" />
 
       <div class="row my-3">
         <div class="col">
-          <client-view [client]="invoice.client"></client-view>
+          <client-view [client]="invoice.client" />
         </div>
 
         <div class="col">
-          <company-view [company]="invoice.company"></company-view>
+          <company-view [company]="invoice.company" />
         </div>
       </div>
       <div>
-        <list-item [items]="invoice.items"></list-item>
+        <list-item [items]="invoice.items" (removeEventEmitter)="removeItem($event)"/>
+        <total [total]="invoice.total"/>
       </div>
     </div>
   </div>
