Finalizacion de la practica para aprender los conceptos de angular

--- a/src/app/components/invoice/invoice.component.html
+++ b/src/app/components/invoice/invoice.component.html
@@ -16,8 +16,13 @@
         </div>
       </div>
       <div>
-        <list-item [items]="invoice.items" (removeEventEmitter)="removeItem($event)"/>
-        <total [total]="invoice.total"/>
+        <!--5. nuevamente aqui se recibe el id a traves de removeEventEmmiter y se lo manda al metodo removeItem($event) -->
+        <list-item
+          [items]="invoice.items"
+          (removeEventEmitter)="removeItem($event)"
+        />
+        <total [total]="invoice.total" />
+        <form-item (addItemEventEmitter)="addItem($event)"/>
       </div>
     </div>
   </div>
