--- a/src/app/components/row-item/row-item.component.html
+++ b/src/app/components/row-item/row-item.component.html
@@ -2,6 +2,7 @@
 <td>{{ item.product }}</td>
 <td>{{ item.price }}</td>
 <td>{{ item.quantity }}</td>
+<!-- 1. evento invocara un elemento de la clase row-item.component.ts -->
 <td><button class="btn btn-danger btn-sm"
     (click)="onRemove(item.id)">
     remove
